--- a/saske.theme.css
+++ b/saske.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Saske's Theme","description":"Custom version of Witcher3 theme<br>by Saske13","author":"Saske","version":"1.1"}*//{}
+//META{"name":"Saske's Theme","description":"Custom version of Witcher3 theme","author":"Saske","version":"1.1"}*//{}
 
 /* if you wish to hide blocked messages change display: to display:none */
 
@@ -26,6 +26,10 @@ background-size:cover!important;
 background:url(https://cdn.discordapp.com/attachments/253879759002402816/309375866897563649/thumb-1920-740817.jpg)!important;
 background-size:cover!important;
 opacity:.95!important
+}
+
+.theme-dark .ui-standard-sidebar-view{
+	background: url(https://cdn.discordapp.com/attachments/253879759002402816/309375880344371201/thumb-1920-715036.png);
 }
 
 /* Embed Left Borders and Background */
@@ -406,7 +410,7 @@ bottom:-10px
 .guilds-wrapper .guilds .guild+.guild {
 width:50px!important;
 height:50px!important;
-background-size:50px 50px!importan
+background-size:50px 50px!important
 }
 
 .guilds-wrapper .guilds .guild {
@@ -3140,8 +3144,8 @@ border:none!important;
 background-color:#232323;
 top:8px;
 background-repeat:no-repeat;
-width:50%;
-height:128px
+width:143px;
+height:143px
 }
 
 .create-guild-container .avatar-uploader .avatar-uploader-inner {
@@ -7305,16 +7309,24 @@ border-top:none
 /* New User Settings */
 
 .ui-standard-sidebar-view .sidebar-region .scroller {
-background-color:#191919
+background-color: rgba(0, 0, 0, 0.7);
 }
 
 .ui-standard-sidebar-view .scroller {
-background-color:#232323
+background-color: rgba(0, 0, 0, 0.7);
+}
+
+.theme-dark .ui-standard-sidebar-view .content-region{
+	background: transparent;
+}
+
+.theme-dark .ui-standard-sidebar-view .sidebar-region{
+	background-color: transparent;
 }
 
 .ui-standard-sidebar-view .btn-close {
 border-radius:12px;
-border-color:#383838!important
+border:none!important
 }
 
 .ui-standard-sidebar-view .btn-close:hover {
@@ -8252,3 +8264,6 @@ background-color:#383838
 background-color:#303030
 }
 
+.ui-standard-sidebar-view .content-column.default{
+	background-color: rgba(0, 0, 0, 0.8);
+}
